@@ -27,12 +27,13 @@ OBJS=	md5.o \
 	tbf.o \
 	bgp.o \
 
-PLUGINS=garden.so autothrottle.so autosnoop.so
+PLUGINS=garden.so autothrottle.so autosnoop.so stripdomain.so
+TARGETS=l2tpns nsctl generateload bounce $(PLUGINS)
 
-all:	l2tpns nsctl generateload bounce $(PLUGINS)
+all:	$(TARGETS)
 
 clean:
-	/bin/rm -f *.o *.so l2tpns nsctl
+	/bin/rm -f *.o *.so $(TARGETS)
 
 depend:
 	(sed -n 'p; /^## Dependencies: (autogenerated) ##/q' Makefile && \
