@@ -16,6 +16,7 @@
 - Make autothrottle.so understand cisco lcp:interface-config - Yuri
 - Show filter stats in show session - Yuri
 - Cleanup from Michael to change sid to unique_id
+- Add plugin to remove domain name from auth requests
 
 * Tue Jul 13 2004 Brendan O'Dea <bod@optusnet.com.au> 2.0.1
 - Update INSTALL, Docs/manual.html documentation.
